# pypublib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-tests.yml  docs.yml  release.yml  tests.yml
docs/: HowToBuild.md  conf.py  index.rst
examples/01_book_creation/: main.py
examples/02_book_parsing/: main.py
examples/03_book_metadata/: metadata.py
examples/04_markdown/: main.py
examples/05_validation/: main.py
scripts/: generate_docs_readme.py
src/pypublib/: __init__.py  __main__.py  book.py  chapter.py  edit.py  epub.py  markdown.py
test/pypublib/: TestChapter.py  TestEditing.py  TestEpub.py  TestInit.py  TestMarkdown.py  TestOpf.py  TestValidation.py  __init__.py  run_tests.py
tests/: conftest.py
tests/pypublib/: TestBook.py  TestChapter.py  TestEdit.py  TestEditing.py  TestEpub.py  TestGenerate.py  TestHtml.py  TestOpf.py  TestValidation.py  __init__.py
