# File: `pyproject.toml`
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypublib"
version = "0.1.2"
description = "A Python library for reading and writing EPUB files."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Heiko Sippel", email = "heiko.sippel@gmail.com" }]
dependencies = []

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

keywords = ["epub", "epub3", "ebook", "markdown", "epub-generator"]

[project.urls]
Homepage = "https://infaktum.github.io/pypublib/README.html"
Repository = "https://github.com/infaktum/pypublib"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pypublib*"]



[project.scripts]
epub = "pypublib.__main__:main"

